test/tests/stages/14_pointers/valid/declarators/declarators.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[381]:
  int
  identifier(return_3)
  (
  void
  )
  ;
  int
  (
  identifier(return_3)
  (
  void
  )
  )
  ;
  int
  (
  identifier(return_3)
  )
  (
  void
  )
  ;
  int
  (
  (
  identifier(return_3)
  )
  )
  (
  void
  )
  {
  return
  const int(3)
  ;
  }
  long
  identifier(l)
  =
  const int(100)
  ;
  long
  *
  identifier(two_pointers)
  (
  double
  identifier(val)
  ,
  double
  *
  identifier(ptr)
  )
  {
  *
  identifier(ptr)
  =
  identifier(val)
  ;
  return
  &
  identifier(l)
  ;
  }
  long
  (
  *
  identifier(two_pointers)
  (
  double
  identifier(val)
  ,
  double
  (
  *
  identifier(d)
  )
  )
  )
  ;
  long
  *
  (
  identifier(two_pointers)
  )
  (
  double
  identifier(val)
  ,
  double
  *
  (
  identifier(d)
  )
  )
  ;
  long
  *
  (
  identifier(two_pointers)
  )
  (
  double
  identifier(val)
  ,
  double
  (
  *
  (
  identifier(d)
  )
  )
  )
  ;
  unsigned
  *
  *
  identifier(pointers_to_pointers)
  (
  int
  *
  *
  identifier(p)
  )
  {
  static
  unsigned
  identifier(u)
  ;
  static
  unsigned
  *
  identifier(u_ptr)
  ;
  identifier(u_ptr)
  =
  &
  identifier(u)
  ;
  identifier(u)
  =
  *
  *
  identifier(p)
  ;
  return
  &
  identifier(u_ptr)
  ;
  }
  unsigned
  (
  *
  *
  (
  identifier(pointers_to_pointers)
  (
  int
  *
  (
  *
  identifier(p)
  )
  )
  )
  )
  ;
  unsigned
  *
  (
  *
  identifier(pointers_to_pointers)
  (
  int
  (
  *
  *
  identifier(p)
  )
  )
  )
  ;
  unsigned
  (
  *
  (
  *
  (
  (
  identifier(pointers_to_pointers)
  )
  (
  int
  (
  *
  (
  *
  (
  identifier(p)
  )
  )
  )
  )
  )
  )
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(0)
  ;
  int
  (
  *
  identifier(i_ptr)
  )
  =
  &
  identifier(i)
  ;
  int
  (
  *
  *
  identifier(ptr_to_iptr)
  )
  =
  &
  identifier(i_ptr)
  ;
  double
  (
  identifier(d1)
  )
  =
  const double(0.0)
  ;
  double
  identifier(d2)
  =
  const double(10.0)
  ;
  double
  *
  (
  identifier(d_ptr)
  )
  =
  &
  identifier(d1)
  ;
  long
  (
  *
  (
  identifier(l_ptr)
  )
  )
  ;
  unsigned
  *
  (
  *
  (
  identifier(ptr_to_uptr)
  )
  )
  ;
  identifier(i)
  =
  identifier(return_3)
  (
  )
  ;
  if
  (
  identifier(i)
  !=
  const int(3)
  )
  return
  const int(1)
  ;
  if
  (
  *
  identifier(i_ptr)
  !=
  const int(3)
  )
  {
  return
  const int(2)
  ;
  }
  identifier(l_ptr)
  =
  identifier(two_pointers)
  (
  identifier(d2)
  ,
  identifier(d_ptr)
  )
  ;
  if
  (
  identifier(l_ptr)
  !=
  &
  identifier(l)
  )
  {
  return
  const int(3)
  ;
  }
  if
  (
  *
  identifier(l_ptr)
  !=
  const int(100)
  )
  {
  return
  const int(4)
  ;
  }
  if
  (
  *
  identifier(d_ptr)
  !=
  const double(10.0)
  )
  {
  return
  const int(5)
  ;
  }
  if
  (
  identifier(d1)
  !=
  const double(10.0)
  )
  {
  return
  const int(6)
  ;
  }
  identifier(ptr_to_uptr)
  =
  identifier(pointers_to_pointers)
  (
  identifier(ptr_to_iptr)
  )
  ;
  if
  (
  *
  *
  identifier(ptr_to_uptr)
  !=
  const int(3)
  )
  {
  return
  const int(7)
  ;
  }
  return
  const int(0)
  ;
  }
