test/tests/stages/14_pointers/invalid_types/cast_pointer_to_double.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  ;
  double
  identifier(d)
  =
  (
  double
  )
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
